# Convolutional_Neural_Net

./: plan.txt
src/: Bias.cpp  CMakeLists.txt  ConvolutionalLayer.cpp  DenseLayer.cpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.cpp  PoolingLayer.cpp  StorageForNeuronsAndWeights.cpp  Weight.cpp  initializer.cpp  main.cpp  mnist_images.cpp  mnist_images.hpp  nnalgorithms.cpp  nnalgorithms.hpp  randomize_seed.cpp
src/Testing/: CMakeLists.txt  tests.hpp  updateTestDenseLayer.cpp
